tests/baselines/reference/contextuallyTypingOrOperator2.errors.txt
contextuallyTypingOrOperator2.ts(1,39): error TS2872: This kind of expression is always truthy.


==== contextuallyTypingOrOperator2.ts (1 errors) ====
    var v: { a: (_: string) => number } = { a: s => s.length } || { a: s => 1 };
                                          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    
    var v2 = (s: string) => s.length || function (s) { s.aaa };